changed population to zip code

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ input.search {
   background: linear-gradient(to top,  #ffffff 0%,#EFEFEF 100%);
 }
 
-span.population {
+span.zip {
   font-size: 15px;
 }
 
